--- a/src/App.scss
+++ b/src/App.scss
@@ -1,58 +1,66 @@
+//Themeing
+.primary-color {
+  background-color: #262833;
+
+  color: #ffffff;
+}
+
 @import '~antd/dist/antd.css';
-
 .App {
-    text-align: center;
+  text-align: center;
 }
 
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
+.logo {
+  height: 40px;
+  color: #000;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
+// @media (prefers-reduced-motion: no-preference) {
+//   .App-logo {
+//     animation: App-logo-spin infinite 20s linear;
+//   }
+// }
 
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
-}
+// @keyframes App-logo-spin {
+//   from {
+//     transform: rotate(0deg);
+//   }
+//   to {
+//     transform: rotate(360deg);
+//   }
+// }
 
 .container {
-    display: flex;
-    justify-content: center;
-    padding: 10px;
-    height: 100vh;
-    .form {
-        width: 400px;
-        margin: auto;
-        .login-form-button {
-            width: 100%;
-        }
+  display: flex;
+  justify-content: center;
+  height: 100vh;
+}
+.container-login {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  height: 100vh;
+  .form {
+    width: 400px;
+    margin: auto;
+    .login-form-button {
+      width: 100%;
     }
+  }
+}
+//  ANT- DESIGN OVERRIDES
+.ant-layout-header {
+  padding: 0 0;
+}
+.ant-menu {
+  justify-content: flex-end;
+  background-color: #262833;
+  color: #ffffff;
+  .App-logo {
+    margin-right: auto;
+  }
 }
 
-
-
-
+.ant-menu-sub {
+  color: #262833;
+}
