--- a/src/App.scss
+++ b/src/App.scss
@@ -96,18 +96,37 @@ body {
 .ant-drawer-content-wrapper {
   width: 300px !important;
 }
+.ant-typography {
+  color: #4a4b4e;
+}
+
 //Home page
 .home-page-container {
-  background-color: #e2e5f5;
+  background-color: #fdfdfd;
   position: relative;
-  max-width: 1200px;
+  max-width: 1600px;
   margin: auto;
   min-height: 500px;
   padding: 20px;
+  margin-bottom: 40px;
+}
+.home-landing-title {
+  color: #3c85ca;
 }
 .home-page-text-wrapper {
   border-radius: 3rem;
   max-width: 400px;
+}
+
+.home-feature-image-wrapper {
+  overflow: hidden;
+  img {
+    max-height: 500px;
+    width: 100%;
+  }
+}
+.feature-divider {
+  color: #11518d;
 }
 
 //************** common utils styles****************//
@@ -115,7 +134,9 @@ body {
 //App titles
 .app-titles {
   margin: 0.5rem;
-
+  .xlarge {
+    font-size: 2.5rem;
+  }
   .large {
     font-size: 2rem;
   }
@@ -125,11 +146,20 @@ body {
   .small {
     font-size: 1rem;
   }
+  .strong {
+    font-weight: 600;
+  }
+  .xstrong {
+    font-weight: 900;
+  }
 }
 
 .app-texts {
   margin: 0.5rem;
-
+  color: #3c85ca;
+  .xlarge {
+    font-size: 2rem;
+  }
   .large {
     font-size: 1.5rem;
   }
@@ -141,6 +171,13 @@ body {
   }
   .xsmall {
     font-size: 0.5rem;
+  }
+
+  .strong {
+    font-weight: 600;
+  }
+  .xstrong {
+    font-weight: 900;
   }
 }
 
