added feed layout basic

--- a/src/App.scss
+++ b/src/App.scss
@@ -133,6 +133,19 @@ body {
   color: #5d5d5d;
 }
 
+//FORUM styles
+.forum-wrapper {
+  height: 100%;
+}
+.forum-container {
+  max-width: 1600px;
+}
+.forum-pageselect-radio {
+  margin: 20px auto;
+}
+.forum-page-wrapper {
+  height: 100%;
+}
 //************** common utils styles****************//
 
 //App titles
