--- a/src/App.scss
+++ b/src/App.scss
@@ -161,8 +161,13 @@ body {
 .new-post-submit {
   float: right;
 }
+.feed-loader-wrapper {
+  display: flex;
+  justify-content: center;
+}
 // .forum-search-skill-select{}
 // .forum-search-type-select{}
+
 //************** common utils styles****************//
 
 //App titles
@@ -228,4 +233,12 @@ body {
   .xsmall {
     font-size: 0.5rem;
   }
+}
+
+.view-wrapper {
+  height: 100%;
+  width: 100%;
+}
+.view-container {
+  max-width: 1600px;
 }
