--- a/src/App.scss
+++ b/src/App.scss
@@ -171,14 +171,19 @@ body {
 }
 .feed-list-wrapper {
   text-align: left;
+  background: #ffffff;
+  padding: 10px;
+  border-radius: 8px;
+}
+.feed-list-wrapper:hover {
+  box-shadow: -13px 0px 11px -7px #e9e9e9ab;
 }
 .feed-list-item {
   flex-direction: column;
   align-items: stretch;
   border-bottom: none !important;
   padding: 10px;
-  background: rgb(250, 253, 255);
-  box-shadow: 0px 0px 41px -28px #c7d2e8;
+
   border-radius: 8px;
 
   .ant-list-item-action {
@@ -190,7 +195,6 @@ body {
   padding: 8px 24px;
   overflow: auto;
   border: 1px solid #e8e8e8;
-  box-shadow: 0 0px 12px -11px #000000 inset;
   border-radius: 8px;
   margin: 10px;
 }
@@ -200,7 +204,12 @@ body {
 .add-comment-input {
   border-radius: 8px;
 }
-
+.comment-submit-wrapper {
+  text-align: right;
+}
+.comment-input-wrapper {
+  padding: 0 10px;
+}
 // .forum-search-skill-select{}
 // .forum-search-type-select{}
 
@@ -236,6 +245,9 @@ body {
   }
   .large {
     font-size: 1.5rem;
+  }
+  .mediumlarge {
+    font-size: 1.25rem;
   }
   .medium {
     font-size: 1rem;
