login/registration page updated

--- a/src/App.scss
+++ b/src/App.scss
@@ -57,6 +57,9 @@ body {
     .login-form-button {
       width: 100%;
     }
+    .login-form-button-link {
+      text-align: center;
+    }
   }
 }
 
