added message page

--- a/src/App.scss
+++ b/src/App.scss
@@ -288,12 +288,15 @@ body {
   justify-content: flex-end;
   padding-bottom: 10px;
   .text-left {
-    .messager-preview-message {
+    float: left;
+    .messager-preview-message-container {
       border-radius: 8px 0 8px 0;
     }
   }
   .text-right {
-    .messager-preview-message {
+    float: right;
+
+    .messager-preview-message-container {
       border-radius: 0 8px 0 8px;
     }
   }
@@ -307,10 +310,16 @@ body {
   height: 100%;
 }
 .messager-preview-message {
-  background-color: #3982ee;
   color: white;
+}
+.messager-preview-message-container {
   padding: 10px 10px;
-  margin: 5px;
+  background-color: #3982ee;
+}
+.message-menu-item-avatar {
+  .ant-avatar-string {
+    line-height: 33px;
+  }
 }
 // .message-input {
 //   width: 100%;
