--- a/src/App.scss
+++ b/src/App.scss
@@ -279,7 +279,11 @@ body {
 .messager-wrapper {
   display: flex;
   flex-direction: column;
+  position: relative;
   height: 100%;
+  .ant-page-header {
+    background-color: #0015290f;
+  }
 }
 .message-preview-pane {
   display: flex;
@@ -327,10 +331,17 @@ body {
   padding-top: 24px;
   border: none;
   background-color: transparent;
+  .user-details-avatar {
+    height: 80px;
+    width: 80px;
+  }
   .ant-card-meta-title,
   .ant-card-meta-description {
     color: #fff;
   }
+}
+.messager-sidebar-menu-item {
+  margin: auto;
 }
 // .message-input {
 //   width: 100%;
