--- a/src/App.scss
+++ b/src/App.scss
@@ -165,6 +165,14 @@ body {
 .home-banner-container {
   position: relative;
 }
+.home-banner-video-container {
+  position: absolute;
+  height: 100%;
+  background: $banner-img;
+  background-size: cover;
+  background-repeat: no-repeat;
+  width: 100%;
+}
 .home-banner-video {
   object-fit: cover;
   width: 100%;
