--- a/src/App.scss
+++ b/src/App.scss
@@ -178,12 +178,12 @@ body {
 }
 .home-banner-video {
   object-fit: cover;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  width: 100%;
+  height: 100%;
   position: absolute;
   z-index: 0;
+  top: 0;
+  left: 0;
 }
 .banner-video-tint {
   content: ''; // ::before and ::after both require content
