Profile static UI completed

--- a/src/App.scss
+++ b/src/App.scss
@@ -435,3 +435,16 @@ body {
 .text-right {
   text-align: right;
 }
+
+//PROFILES
+
+.profile-wrapper-header {
+  background-color: 'rgb(154 160 164);';
+  height: '140px';
+}
+
+.profile-wrapper-header-div {
+  display: 'flex';
+  margin: '5px';
+  padding: '5px';
+}
