ui modifications. added search/ feeds

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,9 @@
 //Themeing
+$primary-color: #0e548d;
+$secondary-color: #3ca6b5;
+$tertiary-color: #ffb12e;
 .primary-color {
-  background-color: #262833;
+  background-color: $primary-color;
 
   color: #ffffff;
 }
@@ -48,6 +51,8 @@ body {
   min-width: 320px;
 }
 .container-login {
+  background: linear-gradient(180deg, #0e548d, #3ca6b5);
+
   display: flex;
   justify-content: center;
   padding: 10px;
@@ -120,7 +125,7 @@ body {
 }
 .ant-menu {
   justify-content: flex-end;
-  background-color: #262833;
+  background-color: $primary-color;
   color: #ffffff;
   .App-logo {
     margin-right: auto;
@@ -132,7 +137,8 @@ body {
 }
 
 .site-layout-content {
-  background-color: #ffffff;
+  // background-color: #ffffff;
+  background: linear-gradient(180deg, #0e548d, #3ca6b5);
   height: 100%;
 }
 
@@ -235,13 +241,40 @@ body {
 .forum-container {
   max-width: 1600px;
 }
+.forum-tabs {
+  margin-top: 15px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 27px -9px #b2b5b7;
+  padding: 10px;
+  padding-top: 40px;
+  background-color: #fff;
+  .ant-tabs-nav::before {
+    border: none;
+  }
+  .ant-tabs-nav {
+    margin: 0;
+  }
+  .ant-tabs-nav-list {
+    .ant-tabs-tab {
+      // background-color: transparent;
+      // border: transparent;
+      // margin: 0 10px;
+
+      padding-top: 0px;
+      padding-bottom: 0px;
+    }
+    .feed-tabs-name {
+      padding: 2px 10px;
+    }
+  }
+}
 .forum-pageselect-radio {
   margin: 20px auto;
 }
 .forum-page-wrapper {
   height: 100%;
-  padding: 24px;
-  margin: 24px;
+  // padding: 24px;
+  // margin: 24px;
   border-radius: 8px;
   @media screen and (max-width: 576px) {
     .ant-list-item {
@@ -253,8 +286,10 @@ body {
   // box-shadow: 0 -3px 42px -17px #c7d2e8;
 }
 .forum-page-header {
+  background-color: whitesmoke;
+  margin-bottom: 10px;
   @media screen and (max-width: 576px) {
-    padding: 10px 10px;
+    padding: 10px 0px;
   }
   @media screen and (max-width: 768px) {
     justify-content: flex-end;
@@ -264,7 +299,6 @@ body {
   }
 }
 .forum-page-header-extra-wrapper {
-  background-color: #ffffff;
   flex: 1 1 auto;
   .ant-page-header-heading {
     margin-left: auto;
@@ -288,6 +322,16 @@ body {
     }
   }
 }
+.search-result-container {
+}
+.user-card-wrapper {
+  // flex: 1;
+  margin: auto;
+}
+.project-card-wrapper {
+  margin: auto;
+  // flex: 1;
+}
 .multiselect {
   min-width: 180px;
   margin: auto;
@@ -304,13 +348,15 @@ body {
   justify-content: center;
 }
 .feed-list-wrapper {
+  box-shadow: 0px 0px 6px 1px #f1f1f1;
+
   text-align: left;
   background: #ffffff;
   padding: 10px;
   border-radius: 8px;
 }
 .feed-list-wrapper:hover {
-  box-shadow: -13px 0px 11px -7px #e9e9e9ab;
+  // box-shadow: -13px 0px 11px -7px #e9e9e9ab;
 }
 .feed-list-item {
   flex-direction: column;
@@ -328,12 +374,13 @@ body {
   height: 300px;
   padding: 8px 24px;
   overflow: auto;
-  border: 1px solid #e8e8e8;
   border-radius: 8px;
   margin: 10px;
+  box-shadow: 0px 0px 22px -4px #f1f1f1;
 }
 .comment-list-spacer {
   width: 100%;
+  padding-left: 50px;
 }
 .add-comment-input {
   border-radius: 8px;
@@ -343,6 +390,10 @@ body {
 }
 .comment-input-wrapper {
   padding: 0 10px;
+}
+.recommendation-container {
+  .ant-card {
+  }
 }
 // .forum-search-skill-select{}
 // .forum-search-type-select{}
@@ -435,7 +486,16 @@ body {
 // }
 
 //************** common utils styles****************//
-
+// PROJECT MODAL
+// .project-modal-wrapper {
+//   // background-color: #f8f9fa;
+//   position: absolute;
+//   max-width: 1600px;
+//   margin: auto;
+//   min-height: 500px;
+//   padding: 20px;
+//   margin-bottom: 40px;
+// }
 //App titles
 .app-titles {
   margin: 0.5rem;
