--- a/src/App.scss
+++ b/src/App.scss
@@ -505,6 +505,7 @@ body {
   padding: 10px;
   border-radius: 8px;
   position: relative;
+  text-align: left;
   .card-user-type {
     position: absolute;
     top: 8px;
@@ -601,14 +602,64 @@ body {
   color: #ffffff;
 }
 
+.italics {
+  font-style: italic;
+}
+
 //PROFILES
 .profile-wrapper-header {
-  background-color: 'rgb(154 160 164);';
-  height: '140px';
+  background-color: #f5f5f5;
+  padding: 20px 20px;
+  margin-top: 20px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 15px -9px #f1f1f1;
+  text-align: left;
+  margin-bottom: 20px;
 }
 
 .profile-wrapper-header-div {
-  display: 'flex';
-  margin: '5px';
-  padding: '5px';
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-right: 10px;
+  .ant-avatar {
+    height: 50px;
+  }
+}
+.profile-tabs {
+  margin-top: 15px;
+  border-radius: 8px;
+  box-shadow: 0px 0px 15px -9px #b2b5b7;
+  padding: 10px;
+  padding-top: 40px;
+  background-color: #fff;
+  min-height: 80%;
+  .ant-tabs-nav::before {
+    border: none;
+  }
+  .ant-tabs-nav {
+    margin: 0;
+  }
+  .ant-tabs-nav-list {
+    .ant-tabs-tab {
+      // background-color: transparent;
+      // border: transparent;
+      // margin: 0 10px;
+
+      padding-top: 0px;
+      padding-bottom: 0px;
+    }
+    .feed-tabs-name {
+      padding: 2px 10px;
+    }
+  }
+
+  .skill-options {
+    background-color: whitesmoke;
+    margin-bottom: 10px;
+  }
+  .feedback-itam {
+    display: flex;
+    align-items: center;
+  }
 }
