--- a/src/App.scss
+++ b/src/App.scss
@@ -586,6 +586,8 @@ body {
 }
 .view-container {
   max-width: 1600px;
+  display: flex;
+  flex-flow: column;
 }
 
 .full-wide {
@@ -633,7 +635,8 @@ body {
   padding: 10px;
   padding-top: 40px;
   background-color: #fff;
-  min-height: 80%;
+  flex: 1;
+  margin-bottom: 5%;
   .ant-tabs-nav::before {
     border: none;
   }
@@ -654,6 +657,15 @@ body {
     }
   }
 
+  //Projects
+  .text-wrapper {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 7;
+    -webkit-box-orient: vertical;
+  }
+
+  //SKILLS
   .skill-options {
     background-color: whitesmoke;
     margin-bottom: 10px;
