--- a/src/App.scss
+++ b/src/App.scss
@@ -138,7 +138,7 @@ body {
 .ant-modal-wrap {
   display: flex;
   justify-content: center;
-  aligh-items: center;
+  align-items: center;
 }
 .site-layout-content {
   // background-color: #ffffff;
@@ -174,6 +174,10 @@ body {
 }
 .home-banner-container {
   position: relative;
+  .ant-btn-primary {
+    background-color: #0e548d;
+    border-color: #0e548d;
+  }
 }
 .home-banner-video-container {
   position: absolute;
@@ -229,13 +233,21 @@ body {
 
 .home-feature-image-wrapper {
   overflow: hidden;
+  padding: 10px;
   img {
-    max-height: 500px;
+    max-height: 700px;
     width: 100%;
+    border-radius: 8px;
+    box-shadow: 0px 8px 14px -9px #0e548d;
+    // transform: perspective(9cm) rotateX(-5deg) rotateY(20deg);
   }
 }
 .feature-divider {
-  color: #5d5d5d;
+  color: $secondary-color;
+}
+.divider-text {
+  display: inline;
+  text-align: center;
 }
 
 //FORUM styles
