--- a/src/App.scss
+++ b/src/App.scss
@@ -342,7 +342,6 @@ body {
   }
 }
 .search-result-container {
-  justify-content: space-around;
 }
 .user-card-wrapper {
   // flex: 1;
@@ -400,6 +399,10 @@ body {
   border-radius: 8px;
   margin: 10px;
   box-shadow: 0px 0px 22px -4px #f1f1f1;
+  margin: 0 10px !important;
+  .ant-list-item-meta {
+    margin-bottom: 0px;
+  }
 }
 .comment-list-spacer {
   width: 100%;
@@ -413,6 +416,15 @@ body {
 }
 .comment-input-wrapper {
   padding: 0 10px;
+}
+.comment-name-container {
+  margin: 0 10px !important;
+}
+.comment-timestamp-container {
+  margin: 0 10px !important;
+}
+.comment-timestamp {
+  // font-size: ;
 }
 .recommendation-container {
   .ant-card {
@@ -567,6 +579,8 @@ body {
   flex-flow: column;
   .ant-card-body {
     flex: 1;
+    max-height: 400px;
+    overflow: hidden;
   }
   .card-user-type {
     position: absolute;
@@ -578,16 +592,16 @@ body {
 .app-titles {
   margin: 0.5rem;
   .xlarge {
-    font-size: 2.5rem;
+    font-size: 2.75rem;
   }
   .large {
-    font-size: 2rem;
+    font-size: 2.25rem;
   }
   .medium {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
   }
   .small {
-    font-size: 1rem;
+    font-size: 1.25rem;
   }
   .strong {
     font-weight: 600;
@@ -598,24 +612,24 @@ body {
 }
 
 .app-texts {
-  margin: 0.5rem;
+  margin: 0.5rem 0px;
   .xlarge {
-    font-size: 2rem;
+    font-size: 2.25rem;
   }
   .large {
-    font-size: 1.5rem;
+    font-size: 1.75rem;
   }
   .mediumlarge {
-    font-size: 1.25rem;
+    font-size: 1.5rem;
   }
   .medium {
-    font-size: 1rem;
+    font-size: 1.25rem;
   }
   .small {
-    font-size: 0.75rem;
+    font-size: 1rem;
   }
   .xsmall {
-    font-size: 0.5rem;
+    font-size: 0.75rem;
   }
 
   .strong {
@@ -627,7 +641,7 @@ body {
 }
 
 .app-button {
-  margin: 0.5rem;
+  margin: 0.5rem 0;
   .large {
     font-size: 1.5rem;
   }
