--- a/src/App.scss
+++ b/src/App.scss
@@ -574,6 +574,7 @@ body {
   padding: 10px;
   border-radius: 8px;
   position: relative;
+  height: 100%;
   text-align: left;
   display: flex;
   flex-flow: column;
