--- a/src/App.scss
+++ b/src/App.scss
@@ -582,6 +582,7 @@ body {
   text-align: left;
   display: flex;
   flex-flow: column;
+  margin-bottom: 10px;
   .ant-card-body {
     flex: 1;
     max-height: 400px;
