--- a/src/App.scss
+++ b/src/App.scss
@@ -364,11 +364,6 @@ body {
     min-width: 150px;
   }
 }
-.new-post-button {
-  position: absolute;
-  bottom: 0;
-  right: 5px;
-}
 .new-post-submit {
   float: right;
   .ant-form-item-control-input-content {
@@ -562,20 +557,10 @@ body {
 .messager-sidebar-menu-item {
   margin: auto;
 }
-.empty-chat {
-  height: 100%;
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-}
-.empty-search {
-  height: 100%;
-  display: flex;
-  flex-flow: column;
-  justify-content: center;
-  align-items: center;
-}
+// .message-input {
+//   width: 100%;
+// }
+
 //************** common utils styles****************//
 // PROJECT MODAL
 .project-modal-wrapper {
@@ -597,7 +582,6 @@ body {
   text-align: left;
   display: flex;
   flex-flow: column;
-  margin-bottom: 10px;
   .ant-card-body {
     flex: 1;
     max-height: 400px;
